tests/invalid/unresolved_scoped_ref_missing_system.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "UnresolvedScopedRefMissingSystem",
    "description": "Scoped reference with nonexistent system path"
  },
  "models": {
    "ModelA": {
      "variables": {
        "x": { "type": "state", "units": "m", "default": 0.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": 1.0
        }
      ]
    }
  },
  "coupling": [
    {
      "type": "variable_map",
      "from": "NonExistentModel.MissingSubsystem.temperature",
      "to": "ModelA.x",
      "transform": "identity"
    }
  ]
}